--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
             <li><a href="mailto:{{ site.altemail }}">{{ site.altemail }}</a></li>
             {% endif %}
             {% if site.gpgfgr %}
-            GPG FGR: {{ site.gpgfgr | escape }}
+            PGP FGR: {{ site.gpgfgr | escape }}
             {% endif %}
         </ul>
       </div>
